Ajustes a diseño landing, y formulario

--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -57,9 +57,9 @@ body {
     align-items: center;
 }
 
-.guests-section {
+/*.guests-section {
     background-color: #efefef !important;
-}
+}*/
 
 #mainMessage {
     min-height: 30vh;
